--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.deadmandungeons</groupId>
     <artifactId>audio-connect-messages</artifactId>
-    <version>1.1.3</version>
+    <version>1.2.0</version>
     <name>AudioConnectMessages</name>
 
     <build>
@@ -23,8 +23,7 @@
     <repositories>
         <repository>
             <id>deadman-dungeons</id>
-            <name>Deadman Dungeons Internal Releases</name>
-            <url>http://deadmandungeons.com/artifactory/libs-release-local</url>
+            <url>http://deadmandungeons.com/artifactory/public</url>
         </repository>
     </repositories>
 
